# dd-python

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/main/domaindrivers/smartschedule/allocation/: __init__.py  allocated_capability.py  allocation_configuration.py  allocation_facade.py  allocations.py  capabilities_allocated.py  capability_released.py  demand.py  demands.py  not_satisfied_demands.py  potential_transfers.py  potential_transfers_service.py  project.py  project_allocation_scheduled.py  project_allocations.py  project_allocations_demands_scheduled.py  project_allocations_id.py  project_allocations_repository.py  project_allocations_repository_impl.py  project_allocations_repository_sqlalchemy.py  project_allocations_sqlalchemy_repository.py  projects.py  projects_allocations_summary.py  publish_missing_demands_service.py  resource_id.py  schema.py
src/main/domaindrivers/smartschedule/allocation/cashflow/: __init__.py  (+12 more)
src/main/domaindrivers/smartschedule/availability/: availability_configuration.py  availability_facade.py  blockade.py  calendar.py  calendars.py  owner.py  resource_availability.py  resource_availability_id.py  resource_availability_read_model.py  resource_availability_repository.py  resource_grouped_availability.py  resource_id.py  resource_taken_over.py  test_taking_random_resource.py
src/main/domaindrivers/smartschedule/optimization/: item.py  optimization_facade.py  result.py  total_capacity.py  total_weight.py  weight_dimension.py
src/main/domaindrivers/smartschedule/planning/: __init__.py  capabilities_demanded.py  chosen_resources.py  create_project_allocations.py  critical_stage_planned.py  demand.py  demands.py  demands_per_stage.py  edit_stage_date_service.py  needed_resources_chosen.py  plan_chosen_resources.py  planning_configuration.py  planning_facade.py  project.py  project_card.py  project_id.py  project_repository.py  project_repository_impl.py  project_repository_sqlalchemy.py  project_sqlalchemy_repository.py  redis_project_repository.py  schema.py
src/main/domaindrivers/smartschedule/resource/: resource_configuration.py  resource_facade.py
src/main/domaindrivers/smartschedule/risk/: __init__.py  risk_configuration.py  risk_periodic_check_saga.py  risk_periodic_check_saga_dispatcher.py  risk_periodic_check_saga_id.py  risk_periodic_check_saga_repository.py  risk_periodic_check_saga_repository_impl.py  risk_periodic_check_saga_repository_sqlalchemy.py  risk_periodic_check_saga_step.py  risk_push_notification.py  schema.py  verify_critical_resource_available_during_planning.py  verify_enough_demands_during_planning.py  verify_needed_resources_available_in_time_slot.py
src/main/domaindrivers/smartschedule/shared/: application_event.py  application_event_publisher.py  base_repository.py  event.py  event.pyi  eventing_configuration.py  events_publisher.py  private_event.py  private_event.pyi  published_event.py  published_event.pyi  time_slot.py
src/main/domaindrivers/smartschedule/simulation/: additional_priced_capability.py  available_resource_capability.py  capability.py  demand.py  demands.py  project_id.py  result.py  simulated_capabilities.py  simulated_project.py  simulation_facade.py  time_slot.py
src/main/domaindrivers/smartschedule/sorter/: edge.py  feedback_arc_se_on_graph.py  graph_topological_sort.py  node.py  nodes.py  sorted_nodes.py
src/main/domaindrivers/storage/: database.py  repository.py  uuid_pg.py
src/main/domaindrivers/utils/: __init__.py  duration.py  events_publisher_in_memory.py  functional.py  functional.pyi  optional.py  serializable.py  serializable.pyi
src/main/resources/: schema-allocations.sql  schema-availability.sql  schema-capability-scheduling.sql  schema-planning.sql  schema-risk.sql
src/test/domaindrivers/: test_architecture_dependency.py
src/test/domaindrivers/allocation/: test_potential_transfer_scenarios.py
src/test/domaindrivers/optimization/: capability_capacity_dimension.py  test_optimization_for_timed_capabilities.py
src/test/domaindrivers/shared/: test_time_slot.py
src/test/domaindrivers/simulation/: available_capabilities_builder.py  simulated_projects_builder.py  test_simulation_scenarios.py
src/test/domaindrivers/smartschedule/: dependency_resolver.py  fixtures.py  mocked_event_publisher.py  test_architecture_dependency.py  test_db_configuration.py
src/test/domaindrivers/smartschedule/allocation/: in_memory_project_allocations_repository.py  test_allocations_to_project.py  test_capability_allocating.py  test_create_hourly_demands_summary_service.py  test_creating_new_project.py  test_demand_scheduling.py  test_potential_transfer_scenarios.py  test_resource_allocating.py
src/test/domaindrivers/smartschedule/availability/: test_availability_calendar.py  test_availability_facade.py  test_resource_availability.py  test_resource_availability_loading.py  test_resource_availability_optimistic_locking.py  test_resource_availability_uniqueness.py
src/test/domaindrivers/smartschedule/optimization/: capability_capacity_dimension.py  test_optimization_for_timed_capabilities.py
src/test/domaindrivers/smartschedule/planning/: planning_db_test_configuration.py  planning_test_configuration.py  test_db_configuration.py  test_planning_facade.py  test_planning_facade_integration.py  test_r_d.py  test_redis_repository.py  test_schedule_calculation.py  test_specialized_waterfall.py  test_standard_waterfall.py  test_time_critical_waterfall.py  test_vision.py
src/test/domaindrivers/smartschedule/risk/: test_risk_periodic_check_saga.py  test_risk_periodic_check_saga_dispatcher_e_2_e.py  test_verify_enough_demands_during_planning.py
src/test/domaindrivers/smartschedule/shared/: test_capability_selector.py  test_time_slot.py
src/test/domaindrivers/smartschedule/simulation/: available_capabilities_builder.py  test_simulation_scenarios.py
src/test/domaindrivers/smartschedule/sorter/: test_feedback_arc_set_on_graph.py  test_graph_topological_sort.py
src/test/domaindrivers/sorter/: test_feedback_arc_set_on_graph.py  test_graph_topological_sort.py
(+81 files in other folders)
