[tool.poetry]
name = "domaindrivers"
version = "0.0.1"
description = ""
authors = ["Marcin Goncerzewicz <marcingoncerzewicz@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src/main" },
]

[tool.poetry.dependencies]
python = "^3.12"

attrs = "^23.2.0"
fastapi = { version = "^0.110.2", extras = ["all"] }
fastapi-events = "^0.11.1"
loguru = "^0.7.2"
pydantic = "^2.7"
python-dateutil = "^2.9.0.post0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
tzlocal = "^5.2"
mockito = "^1.5.0"
freezegun = "^1.4.0"
httpx = "^0.27.0"
injector = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
check = true
remove_all_unused_imports = true

[tool.isort]
line_length = 120
multi_line_output = 3
force_alphabetical_sort_within_sections = true
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
scripts_are_modules = true
explicit_package_bases = true
pretty = true
strict = true