[tool.poetry]
name = "domaindrivers"
version = "0.0.1"
description = ""
authors = ["Marcin Goncerzewicz <marcingoncerzewicz@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "src"},
    { include = "src/main" },
    { include = "domaindrivers", from = "src/main" },
]

[tool.poetry.dependencies]
python = "^3.12"

attrs = "^23.2.0"
fastapi = { version = "^0.110.2", extras = ["all"] }
fastapi-events = "^0.11.1"
loguru = "^0.7.2"
pydantic = "^2.7"
python-dateutil = "^2.9.0.post0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
tzlocal = "^5.2"
mockito = "^1.5.0"
freezegun = "^1.4.0"
httpx = "^0.27.0"
injector = "^0.21.0"
pytestarch = "^2.0.3"
pytz = "^2024.1"
jsonpickle = "^3.2.2"
types-pytz = "^2024.1.0.20240417"
types-python-dateutil = "^2.9.0.20240316"
sqlalchemy = "^2.0.31"
testcontainers = {extras = ["postgres"], version = "^4.7.2"}
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.3.2"
mypy = "^1.11.1"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
check = true
remove_all_unused_imports = true

[tool.isort]
line_length = 120
multi_line_output = 3
force_alphabetical_sort_within_sections = true
profile = "black"

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true

[tool.pytest.ini_options]
testpaths = [
    "src",
    "src/main",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
no_strict_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
scripts_are_modules = true
explicit_package_bases = true
pretty = true
strict = true
#mypy_path = "src/main"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
